snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
8e8b7c6367ad1a89e2be7230e711074e8d0de9b7